--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         
         <h4 class="display-1 fw-bold">For Investor</h4><br>
         <div class="d-flex justify-content-around">
-            <div class="p-2 service"> <div class="card shadow-lg p-3 mb-5 bg-white rounded h-100" style="width: 18rem;">
+            <div class="p-2 service"> <div class="card shadow-lg p-3 mb-5 bg-white rounded h-100" style="width: auto;">
                 <svg xmlns="http://www.w3.org/2000/svg" class="card-img-top star" width="16" height="200" fill="currentColor" class="bi bi-graph-up-arrow" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M0 0h1v15h15v1H0zm10 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4.9l-3.613 4.417a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61L13.445 4H10.5a.5.5 0 0 1-.5-.5"/>
                 </svg>
@@ -111,22 +111,22 @@
             </div>
         </div>
     </div>
-    <div class="p-2 service"> <div class="card shadow-lg p-3 mb-5 bg-white rounded h-100" style="width: 18rem;">
+    <div class="p-2 service"> <div class="card shadow-lg p-3 mb-5 bg-white rounded h-100" style="width: auto;">
         <svg xmlns="http://www.w3.org/2000/svg" class="card-img-top star" width="16" height="200" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
             <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
         </svg>
-        <div class="card-body">
+        <div class="card-body service">
             <h5 class="card-title">Gain Access To A New Age Asset Class</h5>
             <p class="card-text">Our team work to orignate.curate andprecsent disruptive and hyper growth ventures.</p>
         </div>
     </div>
 </div>
-<div class="p-2 service"> <div class="card shadow-lg p-3 mb-5 bg-white rounded h-100" style="width: 18rem;">
+<div class="p-2 service"> <div class="card shadow-lg p-3 mb-5 bg-white rounded h-100" style="width: auto;">
     <svg xmlns="http://www.w3.org/2000/svg" class="card-img-top star" width="16" height="200" fill="currentColor" class="bi bi-file-earmark-text" viewBox="0 0 16 16">
         <path d="M5.5 7a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5"/>
         <path d="M9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.5zm0 1v2A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1z"/>
     </svg>
-    <div class="card-body">
+    <div class="card-body service">
         <h5 class="card-title">Attend E-Pitch Nights</h5>
         <p class="card-text">Our team work to orignate.curate andprecsent disruptive and hyper growth ventures.</p>
     </div>
@@ -136,31 +136,31 @@
 
 <h4 class="display-1 fw-bold">For Founder</h4><br>
     <div class="d-flex justify-content-around">
-        <div class="p-2 service"> <div class="card shadow-lg p-3 mb-5 bg-white rounded h-100" style="width: 18rem;">
-            <svg xmlns="http://www.w3.org/2000/svg" class="card-img-top star" width="16" height="200" fill="currentColor" class="bi bi-laptop" viewBox="0 0 16 16">
+        <div class="p-2 service"> <div class="card shadow-lg p-3 mb-5 bg-white rounded h-100" style="width: auto;">
+            <svg xmlns="http://www.w3.org/2000/svg" class="card-img-top star" height="200" fill="currentColor" class="bi bi-laptop" viewBox="0 0 16 16">
                 <path d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5"/>
             </svg>
-            <div class="card-body">
+            <div class="card-body service">
                 <h5 class="card-title">Access Highe Quality</h5>
                 <p class="card-text">Our team work to orignate.curate andprecsent disruptive and hyper growth ventures.</p>
             </div>
         </div>
     </div>
-        <div class="p-2 service"> <div class="card shadow-lg p-3 mb-5 bg-white rounded h-100" style="width: 18rem;">
-            <svg xmlns="http://www.w3.org/2000/svg" class="card-img-top star" width="16" height="200" fill="currentColor" class="bi bi-bar-chart-line-fill" viewBox="0 0 16 16">
+        <div class="p-2 service"> <div class="card shadow-lg p-3 mb-5 bg-white rounded h-100" style="width: auto;">
+            <svg xmlns="http://www.w3.org/2000/svg" class="card-img-top star" height="200" fill="currentColor" class="bi bi-bar-chart-line-fill" viewBox="0 0 16 16">
                 <path d="M11 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1v-3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3h1V7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7h1z"/>
               </svg>
-            <div class="card-body">
+            <div class="card-body service">
                 <h5 class="card-title">Access Highe Quality</h5>
                 <p class="card-text">Our team work to orignate.curate andprecsent disruptive and hyper growth ventures.</p>
             </div>
         </div>
     </div>
-    <div class="p-2 service"> <div class="card shadow-lg p-3 mb-5 bg-white rounded h-100" style="width: 18rem;">
-        <svg xmlns="http://www.w3.org/2000/svg" class="card-img-top star" width="16" height="200" fill="currentColor" class="bi bi-map" viewBox="0 0 16 16">
+    <div class="p-2 service"> <div class="card shadow-lg p-3 mb-5 bg-white rounded h-100" style="width: auto;">
+        <svg xmlns="http://www.w3.org/2000/svg" class="card-img-top star" height="200" fill="currentColor" class="bi bi-map" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M15.817.113A.5.5 0 0 1 16 .5v14a.5.5 0 0 1-.402.49l-5 1a.502.502 0 0 1-.196 0L5.5 15.01l-4.902.98A.5.5 0 0 1 0 15.5v-14a.5.5 0 0 1 .402-.49l5-1a.5.5 0 0 1 .196 0L10.5.99l4.902-.98a.5.5 0 0 1 .415.103M10 1.91l-4-.8v12.98l4 .8V1.91zm1 12.98 4-.8V1.11l-4 .8zm-6-.8V1.11l-4 .8v12.98z"/>
         </svg>
-        <div class="card-body">
+        <div class="card-body service">
                 <h5 class="card-title">Access Highe Quality</h5>
                 <p class="card-text">Our team work to orignate.curate andprecsent disruptive and hyper growth ventures.</p>
             </div>
