--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -247,7 +248,7 @@
             <div class="container pt-5">
                 <div class="row">
                     <div class="col-lg-6 two-mobiles">
-                        <img class="mobile-2 img-fluid ms-5" src="images/mobile2.png" alt="" >
+                        <img class="mobile-2 img-fluid ms-5 p-0" src="images/mobile2.png" alt="" >
                         <img class="mobile-1 img-fluid" src="images/mobile1.png" alt="">
                     </div>
                     <div class="col-lg-6 text-center">
@@ -266,23 +267,23 @@
                     <div class="row">
                         <h1 class="display-1 text-center fw-bold text-success">What Our Clients Say</h1>
                         <!-- <div class="col-lg-6 col-md-6 ml-auto"> -->
-                        <div class="owl-carousel owl-theme testi9">
+                        
                             <!-- item -->
-                            <div class="d-flex flex-row mb-3 justify-content-center">
-                                <div class="p-2">
+                            <!-- <div class=" mb-3"> -->
+                                <div class="col-lg-6">
                                     <div class="item">
-                                        <div class="card service card-shadow border-0 mb-4 position-relative">
+                                        <div class="card service card-shadow border-0 mb-4">
                                             <div class="p-4 ">
                                                 <h5 class="font-weight-light">WrapKit has given our websites huge
                                                     national presence. We are #1 on page one in Google search results
-                                                    for every website we’ve built, and rank for more keywords than I
+                                                    for every website we've built, and rank for more keywords than I
                                                     ever expected in a very competitive, high-value customer industry.
                                                     In
                                                     addition,
                                                 </h5>
                                             </div>
                                         </div>
-                                        <div class="d-flex align-items-center ml-3 service">
+                                        <div class=" ml-3 service">
                                             <div class="customer-thumb"><img
                                                     src="https://www.wrappixel.com/demos/ui-kit/wrapkit/assets/images/testimonial/1.jpg"
                                                     alt="wrapkit" class="rounded-circle mr-3" /></div>
@@ -295,13 +296,13 @@
                                 </div>
                                 <!-- item -->
                                 <!-- item -->
-                                <div class="p-2">
+                                <div class=" col-lg-6">
                                     <div class="item">
                                         <div class="card service card-shadow border-0 mb-4 position-relative">
                                             <div class="p-4 ">
                                                 <h5 class="font-weight-light">WrapKit has given our websites huge
                                                     national presence. We are #1 on page one in Google search results
-                                                    for every website we’ve built, and rank for more keywords than I
+                                                    for every website we've built, and rank for more keywords than I
                                                     ever expected in a very competitive, high-value customer industry.
                                                     In
                                                     addition,
@@ -319,9 +320,9 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            <!-- </div> -->
                             <!-- item -->
-                        </div>
+                        
                     </div>
                 </div>
         </section>
@@ -347,7 +348,7 @@
                                             <h2 class="mb-0 h5">Create Account</h2>
                                         </div>
                                         <div class="card-body">
-                                            <form action="#">
+                                            <form action="home.html" id="submit_form" method="POST">
                                                 <!-- Form -->
                                                 <div class="form-group mb-4">
                                                     <label for="exampleInputEmailModal2">Your Email</label>
@@ -356,6 +357,7 @@
                                                                 class="fas fa-envelope"></span></span>
                                                         <input type="email" class="form-control"
                                                             placeholder="example@company.com"
+                                                            name="exampleInputEmailModal2"
                                                             id="exampleInputEmailModal2"
                                                             aria-describedby="exampleInputEmailModal2">
                                                     </div>
@@ -369,7 +371,7 @@
                                                             <span class="input-group-text" id="basic-addon4"><span
                                                                     class="fas fa-unlock-alt"></span></span>
                                                             <input type="password" placeholder="Password"
-                                                                class="form-control" id="exampleInputPasswordModal3"
+                                                                class="form-control" name="exampleInputPasswordModal3" id="exampleInputPasswordModal3"
                                                                 aria-describedby="exampleInputPasswordModal3">
                                                         </div>
                                                     </div>
@@ -381,7 +383,7 @@
                                                             <span class="input-group-text" id="basic-addon5"><span
                                                                     class="fas fa-unlock-alt"></span></span>
                                                             <input type="password" placeholder="Confirm Password"
-                                                                class="form-control" id="exampleInputPasswordModal4"
+                                                                class="form-control" name="exampleInputPasswordModal4" id="exampleInputPasswordModal4"
                                                                 aria-describedby="exampleInputPasswordModal4">
                                                         </div>
                                                     </div>
@@ -522,6 +524,21 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
+
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+
+
+<!-- js CDN plugins -->
+<!-- https://code.jquery.com/ -->
+<!-- https://jqueryvalidation.org/ -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/jquery.validate.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js" integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+            <script src="script.js"></script>
 </body>
 
 </html>
